# quality-check

./: .gitignore  MANIFEST.in  README.md  gsm_print_format.html  pyproject.toml  quality_checking_print_format.html  tensile_print_format.html
quality_gsm_app/: hooks.py  install.py  modules.txt  patches.txt
quality_gsm_app/api/: quality.py
quality_gsm_app/patches/: v2_10_add_tensile_testing.py  v2_11_add_combined_quality_print_format.py  v2_12_add_naming_series.py  v2_13_sync_client_scripts.py  v2_14_cleanup_shaft_client_script.py  v2_15_regex_cleanup.py  v2_16_add_gsm_production_entry_field.py  v2_16_add_gsm_shift_session_field.py  v2_17_remove_gsm_shift_session.py  v2_18_add_date_field.py  v2_19_update_testing_types.py  v2_6_inject_client_scripts.py  v2_7_add_roll_no_and_reorder.py  v2_8_add_new_fields_and_update_summary.py  v2_9_add_color_field_and_cleanup.py
quality_gsm_app/patches/v1_0/: create_gsm_quality_setup.py
quality_gsm_app/patches/v1_1/: ensure_quality_checking_schema.py
quality_gsm_app/patches/v1_2/: make_quality_checking_main_doctype.py
quality_gsm_app/patches/v1_3/: force_quality_checking_parent_fix.py
quality_gsm_app/patches/v1_4/: ensure_quality_checking_permissions.py
quality_gsm_app/patches/v2_0/: create_quality_checking_only.py
quality_gsm_app/patches/v2_1/: update_gsm_report_layout.py
quality_gsm_app/patches/v2_2/: update_gsm_report_layout_excel_style.py
quality_gsm_app/patches/v2_3/: enforce_field_permanence.py
quality_gsm_app/patches/v2_4/: fix_quality_fieldtype.py
quality_gsm_app/public/js/: quality_inspection_gsm.js  (+1 more)
(+1 files in other folders)
